<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Decster</string>
    <string name="text_address">Address:</string>
    <string name="text_status_not_connected">Not Connected</string>
    <string name="text_status_connected">Connected</string>
    <string name="text_status">Not Connected</string>
    <string name="text_password">Password:</string>
    <string name="button_connect">Connect</string>
    <string name="button_refresh">Refresh</string>
    <string name="switch_device_on">Device on</string>
    <string name="switch_device_off">Device off</string>
    <string name="menu_save">Save</string>
    <string name="menu_clear">Clear</string>
</resources>
