<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="eu.masar.decster.MainActivity" >

    <TextView
        android:id="@+id/text_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingRight="30dp"
        android:text="@string/text_address"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/edit_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/text_address"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="8"
        android:inputType="text" />

    <TextView
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_address"
        android:layout_below="@+id/text_address"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/text_password"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/text_password"
        android:layout_alignLeft="@id/edit_address"
        android:layout_alignRight="@id/edit_address"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_password"
        android:layout_below="@+id/text_password"
        android:text="@string/button_connect" />

    <TextView
        android:id="@+id/text_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/button_connect"
        android:layout_alignRight="@id/edit_address"
        android:text="@string/text_status"
        android:textSize="28sp" />

    <ToggleButton
        android:id="@+id/switch_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_connect"
        android:textOff="@string/switch_device_off"
        android:textOn="@string/switch_device_on" />

    <Spinner
        android:id="@+id/spinner_ain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/switch_device"
        android:layout_alignLeft="@id/edit_address"
        android:layout_alignRight="@id/edit_address" />

</RelativeLayout>
